# data_visualizator

./: .gitignore  README.md  pyproject.toml
crud/: read_datasets.py
data_visualizator/: datasetFilter.py  logging_setup.py  model_params.py  model_train.py  state.py  utils.py
data_visualizator/config/: __init__.py  available_models.py  base_config.py  models_supported_params.py
data_visualizator/core/: data_operations.py  utils.py
data_visualizator/crud/: __init__.py  read_datasets.py
data_visualizator/gui/: __init__.py  _base.py  actions.py  explorer.py  main_window.py  model_configurator.py  reorderable_splitter.py  tables.py
data_visualizator/gui/menu_bar/: __init__.py  file_menu.py  view_menu.py
data_visualizator/moduls/: basic models.py
scripts/: download_datasets.py
