[project]
name = "data-visualizator"
version = "0.1.0"
description = ""
authors = [
    {name = "GodlikeGoose",email = "aliislamdzafarov054@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pyside6 (>=6.9.2,<7.0.0)"
]

[tool.poetry.scripts]
start-gui = "data_visualizator.gui:start"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

